[feature] Export playlist
